<?xml version="1.0"?>
<package format="3">
  <name>depth_clustering</name>
  <version>1.2.0</version>
  <description>The depth_clustering package</description>

  <maintainer email="cflew@tamu.edu">Christian Flewelling</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>

  <!-- <build_depend>nav_msgs</build_depend> -->
  <!-- <build_depend>message_filters</build_depend> -->
  <!-- <build_depend>tf</build_depend> -->
  <!-- <depend>eigen_conversions</depend> -->

  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>sensor_msgs</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>nav_msgs</run_depend> -->
  <!-- <run_depend>message_filters</run_depend> -->
  <!-- <run_depend>tf</run_depend> -->
  <!-- <run_depend>eigen_conversions</run_depend> -->

  <!-- <test_depend>rosunit</test_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
